# Prog-2-projektna

./: Cargo.toml  README.md  dasdasd
generator1/: Cargo.toml  main.py  main.rs  main2.py
generator1/src/: main.rs  sequence.rs
generator1/src/expression/: evaluation.rs  expression.rs  models.rs
generator1/src/sequence/: arithmetic.rs  constant.rs  drop.rs  geometric.rs  linear.rs  log.rs  models.rs  operacije.rs  potenca.rs  prod.rs  rand.rs
register/: Cargo.toml
register/src/: main.rs
src/: main.rs  sequence.rs
src/sequence/: arithmetic.rs  combined.rs  constant.rs  drop.rs  geometric.rs  models.rs  prod.rs  shifted.rs
testiranje/: Cargo.toml
